ci(yaml): add yamllint workflow + config; chore(pre-commit): add yamllint hook; TEMP: enable doc-tag workflow on feature branch to run sweep

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,3 +10,8 @@ repos:
       - id: markdownlint
         args: ["--config", ".markdownlint.jsonc"]
         files: \.(md|markdown)$
+  - repo: https://github.com/adrienverge/yamllint
+    rev: v1.35.1
+    hooks:
+      - id: yamllint
+        files: \.(yml|yaml)$
