chore(ci): TEMP enable workflow on feature branch to verify issue creation with widened tag regex

--- a/.github/workflows/manage-docs-tags.yml
+++ b/.github/workflows/manage-docs-tags.yml
@@ -12,6 +12,7 @@ on:
   push:
     branches:
       - main  # Trigger on push to main branch
+      - feature/todo-issue-counters-and-style-fixes  # TEMP: trigger on feature branch to validate widened tag matching
   issue_comment:
     types: [created]  # Trigger on new issue comment
   workflow_dispatch:  # Allow manual trigger for full repo sweep
