--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -54,6 +54,7 @@ nav:
     - EEG:
       - research/eeg/index.md
       - Data acquisition: research/eeg/eeg-acquisition.md
+      - Creating EEG tasks: research/eeg/eeg-task.md
 #    - Eye-tracking:
 #      - research/eyetracking/index.md
     - Neural Networks:
