--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -156,7 +156,7 @@ markdown_extensions:
   
 plugins:
   - offline
-#  - privacy
+  - privacy
   - search
   - git-authors
   - git-revision-date-localized:
