Improve CI/CD: centralize deps, add linters, harden link checker
- Create requirements.txt to centralize MkDocs dependencies across workflows
- Remove redundant mkdocs-build.yml (Docs QA already runs mkdocs build --strict)
- Update gh-pages.yml and docs-qa.yml to use requirements.txt
- Pin actions/setup-python consistently to @v5
- Harden .lychee.toml: add max_retries=3
- Add spell check workflow (typos) with _typos.toml config for domain terms
- Add markdown lint workflow (markdownlint-cli2) tuned for mkdocs-material
- Add YAML lint workflow (yamllint) tuned for mkdocs-material

--- a/.github/workflows/docs-qa.yml
+++ b/.github/workflows/docs-qa.yml
@@ -6,6 +6,7 @@ on:
       - 'docs/**'
       - 'mkdocs.yml'
       - 'scripts/docs_ci_check.sh'
+      - 'requirements.txt'
 
 jobs:
   docs-qa:
@@ -24,11 +25,7 @@ jobs:
       - name: Install MkDocs + plugins
         run: |
           python -m pip install --upgrade pip
-          pip install \
-            mkdocs \
-            mkdocs-material \
-            mkdocs-git-revision-date-localized-plugin \
-            mkdocs-git-authors-plugin
+          pip install -r requirements.txt
 
       - name: Run docs checks (strict build + custom assertions)
         run: |
