--- a/.github/workflows/manage-docs-tags.yml
+++ b/.github/workflows/manage-docs-tags.yml
@@ -11,6 +11,10 @@ on:
     types: [created]
   workflow_dispatch:
 
+concurrency:
+  group: "manage-docs-tags"
+  cancel-in-progress: false
+
 permissions:
   contents: write
   issues: write
